<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProductName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/insert_product_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:singleLine="true"
            tools:text="Ikan Patin" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/inputName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtProductPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_price"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:singleLine="true"
            tools:text="40000" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSize"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/inputPrice">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edtSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_size"
            android:inputType="none"
            tools:text="40Kg" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputProvince"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/inputSize">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edtProvince"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_province"
            android:inputType="none"
            tools:text="Jawa Barat" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/inputProvince">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edtCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_city"
            android:inputType="none"
            tools:text="Cirebon" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />

</androidx.constraintlayout.widget.ConstraintLayout>