<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.dashboard.DashboardActivity">

    <LinearLayout
        android:id="@+id/layoutFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSize"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/inputPrice">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edtSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_size"
                android:inputType="none"
                tools:text="40Kg" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputProvince"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/inputSize">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edtProvince"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_province"
                android:inputType="none"
                android:maxHeight="100dp"
                tools:text="Jawa Barat" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/inputProvince">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/select_city"
                android:inputType="none"
                tools:text="Cirebon" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/layoutFilter" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearProgressBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="150dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>